Fix #41: Not showing create pr for sponsor requests

--- a/Frontend/src/Components/StatsCard/StatsCard.module.scss
+++ b/Frontend/src/Components/StatsCard/StatsCard.module.scss
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  max-width: none !important;
 }
 
 .refreshButton {
